# Deep-Learning-Tutorial

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEEP_LEARNING_GUIDE.md  Dockerfile  FAQ.md  LICENSE  MANIFEST.in  Makefile  PR_DESCRIPTION.md  README.md  README_DOCS.md  TODO.md  deep_learning_advanced.py  deep_learning_advanced_optimization.py  deep_learning_advanced_projects.py  deep_learning_cnn.py  deep_learning_cutting_edge.py  deep_learning_fundamentals.py  deep_learning_math_theory.py  deep_learning_rnn.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
datasets/: data_loader.py
deep_learning/: __init__.py
deep_learning/advanced/: __init__.py  core.py  gan.py  gan_impl.py  nas.py  projects.py  transformer_impl.py  vae.py
deep_learning/architectures/: __init__.py  cnn.py  rnn.py  transformer.py
deep_learning/fundamentals/: __init__.py  deep_network.py  mlp.py  perceptron.py
deep_learning/optimizers/: __init__.py  adam.py  advanced_optimization.py  schedulers.py  sgd.py
deep_learning/utils/: __init__.py  _numpy_backend.py  activations.py  initializers.py  interactive.py  losses.py  (+4 more)
docs/: ARCHITECTURE.md  DEPLOY_CLOUD.md  api.rst  conf.py  index.rst
examples/: 01_perceptron_and_gate.py  02_mlp_xor_gate.py  03_cnn_edge_detection.py  04_rnn_sequence_memory.py  05_transformer_attention.py  06_distributed_stub.py  07_mixed_precision_stub.py
exercises/: __init__.py  answers.md
i18n/: README_en.md
notebooks/: 01_fundamentals.ipynb  02_cnn_demo.ipynb  03_rnn_sequence.ipynb
tests/: __init__.py  test_advanced_training.py  test_batch.py  test_cnn.py  test_data_loader.py  test_examples.py  test_fundamentals.py  test_performance.py  test_rnn.py  test_smoke.py
(+10 files in other folders)
